--- a/kandi/malli.tex
+++ b/kandi/malli.tex
@@ -179,7 +179,7 @@ Muita näkymämalleja arkkitehtuuriin on useita, joista jokainen kuitenkin tuo e
 Näiden kahden esitellyn mallin lisäksi on tottakai olemassa joukko eri tarkoituksiin sopivia näkymämalleja, joilla on omat vahvuudet sekä heikkoudet. Yhteensä viittä eri mallia vertailtiin Mayn tutkimuksessa \citep{may2005survey}, jossa kartoitettiin mahdollisimman laajaa näkymien muodostamaa näkökulmien joukkoa, jotka kattaisivat mahdollisimman laajalti ohjelmistoarkkitehtuurin aluetta (domain). Vertailtavat arkkitehtuurit olivat 4+1-malli, SEI:n (Software Engineering Institute) \textit{Views and Beyond}, ISO:n (International Organization for Standardization) \textit{Reference Model of Open Distributed Processing}, Siemens'n \textit{Four View Model} ja \textit{Rational Architecture Description Specification}. Malleja vertailtiin tutkimalla, että kuinka niiden tarjoamat näkökulmat painottavat kolmeen eri kategoriaan liittyviä asioita: sidosryhmät, laadulliset tekijät ja rakenteelliset ominaisuudet. Joukko, joka painotti mahdollisimman laajasti jokaisen osa-alueen ominaisuuksia muodostettiin lopulta seuraavista osista: \textit{Views and Beyond} -mallin kaikki kolme näkymää ja \textit{Rational ADS}:n vaatimukset-näkökulma (requirements viewpoint). Syy miksi juuri nämä valittiin oli se, että \textit{Views and Beyond} sopii erittäin hyvin mallin pohjaksi, koska se kuvaa järjestelmän rakennetta kattavasti, sen näkökulmat ovat itsenäisiä ja se kokonaisuudessaan limittyy hyvin 4+1-mallin sekä Siemens'n mallin kanssa. Kuitenkaan se ei sisällä tarvittavia näkymiä kuvaamaan eri sidosryhmille tärkeitä asioita, kuten esimerkiksi loppukäyttäjiä varten oleva näkymä puuttuu kokonaan. Tämän takia mukaan on otettu \textit{Rational ADS}, jonka vaatimukset-näkökulma koostuu neljästä eri näkymästä: ei-toiminnalliset vaatimukset, alue (domain), käyttötapaus ja käyttökokemus. Tämän avulla mahdollistetaan kommunikointi tärkeiden sidosryhmien kanssa, joista ääripäinä ovat kehittäjät ja asiakkaat. Kehittäjät haluavat usein todella tarkkaa usean eri tason ja näkökulman abstraktia kuvausta luotavasta järjestelmästä \citep{Ran:1998:ASV:288408.288438} tai ymmärtääkseen jo valmiiksi luotua järjestelmää \citep{ARaHVeSCiSDu}, kun taas asiakkaat haluavat nähdä järjestelmän toiminnallisuuden juuri heitä koskevien asioiden kannalta.
 
 \subsubsection{Näkökulmat}
-Näkökulmat (viewpoints) liittyvät vahvasti arkkitehtuurisin näkymiin, kuten aiemmin mainittiin. Ne
+Näkökulmat (viewpoints) liittyvät vahvasti arkkitehtuurisiin näkymiin, kuten aiemmin on mainittu. Näkökulma voidaan määritellä olevan kokoelma malleja (patterns), templaatteja sekä konventioita, joiden avulla näkymä pystytään rakentamaan \citep{Rozanski:2011:SSA:2072649}. Näkökulmien avulla pystytään tuomaan rakennetta ja johdonmukaisuutta esille muuten monimutkaiseen kohdealueeseen eli toteutettavaan ohjelmistojärjestelmään, koska ne rajaavat tarkasteltavaa aihetta. Näkökulmien suhde näkymiin voidaan nähdä seuraavalla kolmella tavalla: näkökulma määrittelee näkymän tavoitteet, kohdeyleisön, sisällön ja ne asiat (concerns), joita näkymä tulee painottamaan; näkymä sopeutuu näkökulmaan ja tarjoaa ratkaisun useaan ongelmaan; ohjelmistojärjestelmän arkkitehtuuri sisältää useita eri näkymiä.
 
 
 
