how to make views

--- a/kandi/references-fi.bib
+++ b/kandi/references-fi.bib
@@ -133,4 +133,22 @@ month={Sept},
  keywords = {architecture viewpoints, consistency, dependencies, software architecture, traceability}
 } 
 
+@inproceedings{Garlan:2000:SAR:336512.336537,
+ author = {Garlan, David},
+ title = {Software Architecture: A Roadmap},
+ booktitle = {Proceedings of the Conference on The Future of Software Engineering},
+ series = {ICSE '00},
+ year = {2000},
+ isbn = {1-58113-253-0},
+ location = {Limerick, Ireland},
+ pages = {91--101},
+ numpages = {11},
+ url = {http://doi.acm.org/10.1145/336512.336537},
+ doi = {10.1145/336512.336537},
+ acmid = {336537},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {software architecture, software design, software engineering}
+} 
+
 
