defining testability inside architecture

--- a/kandi/malli.tex
+++ b/kandi/malli.tex
@@ -77,7 +77,7 @@
 
 
 % testattavuus & arkkitehtuuri
-\title{Ohjelmistojen testattavuuden parantaminen arkkitehtuurin avulla}
+\title{Testattavuuden ilmeneminen ohjelmistoarkkitehtuurissa}
 \author{Kristian Wahlroos}
 \date{\today}
 \level{Kandidaatintutkielma}
@@ -258,7 +258,11 @@ Mitä huono testattavuus voi tarkoittaa järjestelmän kannalta?
 Modulaarisuus, mah. vähän riippuvuuksia. Miten tulee esille arkkitehtuurin kuvauksissa? Näkymät?
 
 \subsection{Hyvä testattavuus?}
+
+Testattavuuden parantaminen erillisen patternin avulla \citep{coelho_improving_2005}. 
+
 \subsection{Arkkitehtuuriset hajut}
+Testattavuus \citep{garcia_identifying_2009} yleisesti \citep{bertran_detecting_2011}
 
 \section{Pohdinta}
 
