--- a/kandi/references-fi.bib
+++ b/kandi/references-fi.bib
@@ -152,3 +152,44 @@ month={Sept},
 } 
 
 
+% testattavuus arkkitehtuurissa
+
+
+@inproceedings{garcia_identifying_2009,
+	title = {Identifying Architectural Bad Smells},
+	doi = {10.1109/CSMR.2009.59},
+	abstract = {Certain design fragments in software architectures can have a negative impact on system maintainability. In this paper, we introduce the concept of architectural "bad smells," which are frequently recurring software designs that can have non-obvious and significant detrimental effects on system lifecycle properties. We define architectural smells and differentiate them from related concepts, such as architectural antipatterns and code smells. We also describe four representative architectural smells we encountered in the context of reverse-engineering eighteen grid technologies and refactoring one large industrial system.},
+	eventtitle = {13th European Conference on Software Maintenance and Reengineering, 2009. {CSMR} '09},
+	pages = {255--258},
+	booktitle = {13th European Conference on Software Maintenance and Reengineering, 2009. {CSMR} '09},
+	author = {Garcia, J. and Popescu, D. and Edwards, G. and Medvidovic, N.},
+	year = {2009},
+	keywords = {Application software, architectural bad smell identification, Architectural Bad Smells, Architectural Refactoring, Computer architecture, Computer industry, Computer science, Design engineering, design fragments, grid computing, grid technologies, industrial system refactoring, reverse engineering, software architecture, software architectures, Software design, software maintenance, Software systems, system lifecycle properties, system maintainability, Technology management},
+	file = {IEEE Xplore Abstract Record:files/53/abs_all.html:text/html;IEEE Xplore Full Text PDF:files/52/Garcia et al. - 2009 - Identifying Architectural Bad Smells.pdf:application/pdf}
+}
+
+
+@inproceedings{coelho_improving_2005,
+	title = {Improving architecture testability with patterns},
+	url = {http://dl.acm.org/citation.cfm?id=1094890},
+	pages = {114--115},
+	booktitle = {Companion to the 20th annual {ACM} {SIGPLAN} conference on Object-oriented programming, systems, languages, and applications},
+	publisher = {{ACM}},
+	author = {Coelho, Roberta and Kulesza, Uirá and Von Staa, Arndt},
+	urldate = {2016-02-05},
+	year = {2005},
+	file = {p114-roberta.pdf:files/56/p114-roberta.pdf:application/pdf}
+}
+
+
+@inproceedings{bertran_detecting_2011,
+	title = {Detecting architecturally-relevant code smells in evolving software systems},
+	url = {http://dl.acm.org/citation.cfm?id=1986003},
+	pages = {1090--1093},
+	booktitle = {Proceedings of the 33rd International Conference on Software Engineering},
+	publisher = {{ACM}},
+	author = {Bertran, Isela Macia},
+	urldate = {2016-03-02},
+	year = {2011},
+	file = {06032597.pdf:files/121/06032597.pdf:application/pdf}
+}
