--- a/kandi/references-fi.bib
+++ b/kandi/references-fi.bib
@@ -152,8 +152,65 @@ month={Sept},
 } 
 
 
+% yleinen testattavuus
+
+@article{Freedman:1991:TSC:126218.126229,
+ author = {Freedman, Roy S.},
+ title = {Testability of Software Components},
+ journal = {IEEE Trans. Softw. Eng.},
+ issue_date = {June 1991},
+ volume = {17},
+ number = {6},
+ month = jun,
+ year = {1991},
+ issn = {0098-5589},
+ pages = {553--564},
+ numpages = {12},
+ url = {http://dx.doi.org/10.1109/32.87281},
+ doi = {10.1109/32.87281},
+ acmid = {126229},
+ publisher = {IEEE Press},
+ address = {Piscataway, NJ, USA},
+ keywords = {controllability, domain testability, domain-testable program, domain-testable specification, formal specification, input-output inconsistencies, nondomain-testable specification, observability, program specifications, program testing, small test sets, software components, test outputs}
+} 
+
+@article{Voas:1995:STN:624607.625469,
+ author = {Voas, Jeffrey M. and Miller, Keith W.},
+ title = {Software Testability: The New Verification},
+ journal = {IEEE Softw.},
+ issue_date = {May 1995},
+ volume = {12},
+ number = {3},
+ month = may,
+ year = {1995},
+ issn = {0740-7459},
+ pages = {17--28},
+ numpages = {12},
+ url = {http://dx.doi.org/10.1109/52.382180},
+ doi = {10.1109/52.382180},
+ acmid = {625469},
+ publisher = {IEEE Computer Society Press},
+ address = {Los Alamitos, CA, USA}
+} 
+
 % testattavuus arkkitehtuurissa
 
+@inproceedings{Eickelmann:1996:MOS:243327.243602,
+ author = {Eickelmann, Nancy S. and Richardson, Debra J.},
+ title = {What Makes One Software Architecture More Testable Than Another?},
+ booktitle = {Joint Proceedings of the Second International Software Architecture Workshop (ISAW-2) and International Workshop on Multiple Perspectives in Software Development (Viewpoints '96) on SIGSOFT '96 Workshops},
+ series = {ISAW '96},
+ year = {1996},
+ isbn = {0-89791-867-3},
+ location = {San Francisco, California, USA},
+ pages = {65--67},
+ numpages = {3},
+ url = {http://doi.acm.org/10.1145/243327.243602},
+ doi = {10.1145/243327.243602},
+ acmid = {243602},
+ publisher = {ACM},
+ address = {New York, NY, USA}
+} 
 
 @inproceedings{garcia_identifying_2009,
 	title = {Identifying Architectural Bad Smells},
@@ -193,3 +250,4 @@ month={Sept},
 	year = {2011},
 	file = {06032597.pdf:files/121/06032597.pdf:application/pdf}
 }
+
