--- a/kandi/malli.tex
+++ b/kandi/malli.tex
@@ -249,17 +249,61 @@ Keräys? Muodostus? Ryhmittely?
 
 \section{Testattavuus laadullisena tekijänä}
 Testattavuus luetaan kuuluvan ylläpidettävyyden alle. Mitä on testaus järjestelmissä? 
+\\
+
+Yksikkö vs integraatio vs regressio testauksessa.
+\\
+
+Testaus löytää viat, testattavuus paikat jossa viat voivat sijaita \citep{Voas:1995:STN:624607.625469}. -> "testattavuus tukee testausta" vertauksena kullankaivuu.
+
+Testatavuuden tarkoitus (realisaatio) on arvioida ohjelmaa siten, että voidaan määritellä onko järjestelmän laatu hyvä \citep[s. 20]{Voas:1995:STN:624607.625469}.
+
+Tiedon piiloitus vaikeuttaa testausta \citep[s. 22]{Voas:1995:STN:624607.625469} -> implisiittinen vs eksplisiittinen tiedon katoaminen. Strategiat näiden kontrollointiin \citep[s. 23]{Voas:1995:STN:624607.625469}
+
 
 
 \subsection{Testattavuuden merkitys}
 Mitä huono testattavuus voi tarkoittaa järjestelmän kannalta?
 
+
+\subsection{Hyvä testattavuus}
+
+Isolating modules with high DDR \citep[s. 23]{Voas:1995:STN:624607.625469}.
+
+Observability -> mahdotonta, jos ei inputtia \& Controllability. Side-effects reduce testability -> useat riippuvuudet, joita vaikea hallita?
+
+Testattavan komponentin ominaisuudet: testitapaukset ovat pieniä ja helposti luotavia, testitapaukset eivät ole itseään toistavia, ongelmat on helppo jäljittää tiettyihin komponentteihin. 
+
+Vaikeasti testattavan komponentin ominaisuuksia: testisyöte tuottaa eri ajoilla eri tuloksia, testisyöte ei ikinä tuota asiaa x (epäkonsistentti ulostulo). \citep{Freedman:1991:TSC:126218.126229} 
+
+
+\subsection{Design for maintainability}
+
+lol.
+
+\subsubsection{Design for testability}
+
+Järjestelmä voidaan suunnitella tukemaan hyvää testattavuutta \citep[s. 20]{Voas:1995:STN:624607.625469}. 
+
+
 \section{Arkkitehtuurin vaikutus testattavuuteen}
 Modulaarisuus, mah. vähän riippuvuuksia. Miten tulee esille arkkitehtuurin kuvauksissa? Näkymät?
 
-\subsection{Hyvä testattavuus?}
+Mikä tekee yhdestä arkkitehtuurista testattavamman, kuin toisen? -> Tyylien käyttö parantaa testattavuutta, \citep{Eickelmann:1996:MOS:243327.243602} 
+
+Testattavuus tulee ilmi korkealla tasolla integraatiotestauksessa \citep{Eickelmann:1996:MOS:243327.243602} -> komponenttien rajapintojen toimivuus, miten komponetit antavat datan ja kontrollin eteenpäin.
+
+Kolmentyyppisiä kriittisiä moduuleita: tehtävä, turvallisuus ja pääsykriittiset moduulit \citep{Eickelmann:1996:MOS:243327.243602}. Arkkitehtuurisellakin tasolla nämä pitäisi pitää erillään muista moduuleista.
+
+
+
+\subsection{Hyvä testattavuus arkkitehtuurissa?}
 
 Testattavuuden parantaminen erillisen patternin avulla \citep{coelho_improving_2005}. 
+
+Tietyt arkkitehtuuriset tyylit sopivat tiettyihin testaustapoihin (critical module, sandwich, top-down, bottom-up, thread, big bang) \citep{Eickelmann:1996:MOS:243327.243602}. Kolmeen ensimmäiseen liittyvät vahvasti stubit ja test driverit. 
+
+-> tyylin tunnistaminen?
 
 \subsection{Arkkitehtuuriset hajut}
 Testattavuus \citep{garcia_identifying_2009} yleisesti \citep{bertran_detecting_2011}
