--- a/kandi/references-fi.bib
+++ b/kandi/references-fi.bib
@@ -223,6 +223,20 @@ month={Sept},
  address = {Los Alamitos, CA, USA}
 } 
 
+% arkkitehtuuriset hajut 
+
+@INPROCEEDINGS{HotSpot, 
+author={R. Mo and Y. Cai and R. Kazman and L. Xiao}, 
+booktitle={Software Architecture (WICSA), 2015 12th Working IEEE/IFIP Conference on}, 
+title={Hotspot Patterns: The Formal Definition and Automatic Detection of Architecture Smells}, 
+year={2015}, 
+pages={51-60}, 
+keywords={software architecture;Baldwin design rule theory;Clark design rule theory;architecture smells;automatic detection;bug-proneness;change-prone files;error-prone files;formal definition;hotspot patterns;implicit cross-module dependency;structure-history integrated patterns;tool-supported evaluations;unstable interface;Computer architecture;Detectors;History;Maintenance engineering;Microprocessors;Observers;Software architecture;Software Architecture;Software Quality;Software maintenance}, 
+doi={10.1109/WICSA.2015.12}, 
+month={May}
+
+}
+
 % testattavuus arkkitehtuurissa
 
 @inproceedings{Eickelmann:1996:MOS:243327.243602,
