--- a/kandi/malli.tex
+++ b/kandi/malli.tex
@@ -250,22 +250,21 @@ Keräys? Muodostus? Ryhmittely?
 \newpage
 
 \section{Testattavuus laadullisena tekijänä}
-Testattavuus luetaan kuuluvan ylläpidettävyyden alle (Characteristics of Software Quality). Mitä on testaus järjestelmissä? 
-\\
+Testattavuus luetaan kuuluvan ylläpidettävyyden alle (Characteristics of Software Quality) ja on täten yksi laatuvaatimus. Kuitenkaan se laatuvaatimuksena ei asiakkaalle ole edes aina kovin näkyvä, mutta ohjelmistokehittäjälle se tulee esille useassakin kontekstissa. Vaikeasti testattava järjestelmä on nimittäin myös vaikeasti ylläpidettävä, ja ylläpidettävä järjestelmä on sekä asiakkaalle, että kehittäjällä tärkeä ominaisuus.
 
-Yksikkö vs integraatio vs regressio testauksessa.
-\\
+% Yksikkö vs integraatio vs regressio testauksessa.
+Ohjelmistojärjestelmään kohdistuva testaus voidaan jakaa moneen eri luokkaan, joista kaksi todella yleistä ovat yksikkö -ja integraatiotestaus. Yksikkötestauksessa varmistetaan järjestelmän komponenttien toiminnallisuutta, kun taas integraatiotestauksessa testaus kohdistuu järjestelmän rajapintoihin ja komponenttien yhteistoiminnallisuuteen. Kuitenkin voidaan sanoa, että testaus löytää itse viat, mutta testattavuus  paikat, joissa viat voivat sijaita \citep{Voas:1995:STN:624607.625469}. Testattavuuden voidaankin sanoa tukevan itse testausta ja testausprosessia.
 
-Testaus löytää viat, testattavuus paikat jossa viat voivat sijaita \citep{Voas:1995:STN:624607.625469}. -> "testattavuus tukee testausta" vertauksena kullankaivuu.
-
-Testatavuuden tarkoitus (realisaatio) on arvioida ohjelmaa siten, että voidaan määritellä onko järjestelmän laatu hyvä \citep[s. 20]{Voas:1995:STN:624607.625469}.
+Testattavuuden arvioimisen tarkoituksena on analysoida ohjelmaa siten, että voidaan määritellä onko järjestelmän laatu hyvä \citep[s. 20]{Voas:1995:STN:624607.625469}.
 
 Tiedon piiloitus vaikeuttaa testausta \citep[s. 22]{Voas:1995:STN:624607.625469} -> implisiittinen vs eksplisiittinen tiedon katoaminen. Strategiat näiden kontrollointiin \citep[s. 23]{Voas:1995:STN:624607.625469}
 
 
 
 \subsection{Testattavuuden merkitys}
-Mitä huono testattavuus voi tarkoittaa järjestelmän kannalta?
+% Mitä huono testattavuus voi tarkoittaa järjestelmän kannalta?
+Huono testattavuus voi tarkoittaa järjestelmän kannalta ylläpidettävyyden huononemista. Se saattaa myös aiheuttaa jatkuvaa ongelmaa kehityksen kannalta, koska 
+
 
 
 \subsection{Hyvä testattavuus}
